# mrpc

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: GenerateProto.cmake
include/: await_error.hpp
include/detail/: await_error.hpp
include/mrpc/: await_error.hpp  batch_run.hpp  datagram_packet_handler.hpp  dynamic_buffer_adaptor.hpp  error_code.hpp  method.hpp  mrpc.hpp  packet_handler.hpp  service.hpp  stream_packet_handler.hpp  stub.hpp
include/mrpc/detail/: dynamic_buffer.hpp  dynamic_buffer_adaptor.hpp  error_code.hpp
include/mrpc/impl/: packet_handler.hpp
proto/: mrpc.proto
src/mrpc/: await_error.cpp  dynamic_buffer_adaptor.cpp  error_code.cpp  packet_handler.cpp  service.cpp  stub.cpp
src/mrpc/detail/: dynamic_buffer.cpp  error_code.cpp
test/: test_dynamic_buffer.cpp  test_packet_handler.cpp  test_proto_gen.cpp  test_ranged_parallel_group.cpp  test_service.cpp  test_timer_reset.cpp  test_utils.hpp
